force-app/main/default/objects/Related_Organization__c/Related_Organization__c.object-meta.xml
<CustomObject>
    <label>Related Organization</label>
    <nameField>
        <label>Related Organization Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Related Organizations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>