force-app/main/default/objects/Related_Organization__c/fields/Organization__c.field-meta.xml
<CustomField>
    <fullName>Organization__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Organization</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Related Organizations</relationshipLabel>
    <relationshipName>Related_Organizations</relationshipName>
    <type>Lookup</type>
</CustomField>