force-app/main/default/objects/Related_Organization__c/fields/Organization_Role__c.field-meta.xml
<CustomField>
    <fullName>Organization_Role__c</fullName>
    <label>Organization Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Matching Gift</fullName>
            </value>
            <value>
                <fullName>Soft Credit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>